
  * debian/rules: replace some manual dpkg-parsechangelog calls with
    $(DEB_VERSION) and $(DEB_DISTRIBUTION) and fix logic for
    --disable-dependency-tracking
  * debian/control.in:
    - clean up mozilla suggests to just firefox-esr | thunderbird | firefox
    - add versions to openjdk-{7,8}-jre-headless conflicts now that they are
      also supposed to be fixed

 -- Rene Engelhard <rene@debian.org>  Thu, 23 Nov 2017 18:44:11 +0100

libreoffice (1:5.4.3-2) unstable; urgency=medium

  * debian/patches/java9-*: remove ...
  * debian/patches/java9.diff: ... and merge into one patch again.
  * debian/patches/java9.diff: backport also missing tests fix from master.
    Also add -Dfile.encoding=UTF8 directly to JavaClassSet.mk

  * debian/rules:
    - remove setting JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8 again
    - disable junit tests on 32bit archs (i386/armhf) which fail ucb_complex
      with a libcurl-related SIGSEGV. At least upstream those are not ran
      (at least for armhf) anyway on those archs.

 -- Rene Engelhard <rene@debian.org>  Mon, 13 Nov 2017 17:43:19 +0100

libreoffice (1:5.4.3-1) unstable; urgency=medium

  * New upstream release

  * debian/patches/java9-jawt.diff: add from master; find jawt with Java9 and
    also fix odk/settings/settings.mk for it
  * debian/patches/java9-rhino.diff: add from master; fix rhino build with Java9

  * debian/rules:
    - be consequent and enable the junit tests on armhf/arm64 now that
      those work.
    - stop passing --disable-database-connectivity for no-Base archs
      (closes: #874274)
    - explicitly use and depend on openjdk 9 on i386 now that #876069 is fixed.
    - set JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8 in build-indep (needed for
      Java9 in reportbuilder) 
  * debian/libreoffice-sdbc-firebird.maintscript: remove (redundant)
    $DPKG_MAINTSCRIPT_PACKAGE and update version (closes: #880426)
  * debian/rules, debian/libreoffice-common.maintscript: fix path in/for