@@ -225,6 +225,7 @@ Recommends: fonts-crosextra-caladea,
 Suggests: cups-bsd,
           firefox-esr | thunderbird | firefox,
           ghostscript,
+          gpa,
           hunspell-dictionary,
           hyphen-hyphenation-patterns,
           imagemagick | graphicsmagick-imagemagick-compat,
@@ -599,7 +600,7 @@ Depends: libreoffice-core (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: ${gnome-gtk-recommends}
-Suggests: libreoffice-evolution
+Suggests: libreoffice-evolution, seahorse
 Section: gnome
 Enhances: libreoffice
 Provides: libreoffice-gtk-gnome
