@@ -65,6 +65,7 @@ Suggests: cups-bsd,
           openclipart2-libreoffice | openclipart-libreoffice,
           pstoedit,
           unixodbc,
+          gpa,
           ${gstreamer-plugins-suggests},
           ${java-runtime-depends},
           ${ooo-officebean-dep},
@@ -416,7 +417,7 @@ Depends: libreoffice-core (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: ${gnome-gtk-recommends},
-Suggests: libreoffice-evolution
+Suggests: libreoffice-evolution, seahorse
 Section: gnome
 Enhances: libreoffice
 Provides: libreoffice-gtk-gnome
