@@ -4,7 +4,7 @@ Depends: libreoffice-core (= ${binary:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: ${kde-iconset-dep}
-Suggests: kmail, konqueror
+Suggests: kmail, konqueror, kleopatra | kgpg
 Section: kde
 Enhances: libreoffice
 Replaces: libreoffice-core (= 1:4.3.0~beta1-1)
