@@ -9,6 +9,8 @@ libreoffice (1:5.4.3-3) UNRELEASED; urgency=medium
     - clean up mozilla suggests to just firefox-esr | thunderbird | firefox
     - add versions to openjdk-{7,8}-jre-headless conflicts now that they are
       also supposed to be fixed
+  * debian/control.{kde.}.in: suggest the "certificate managers" for gpg:
+    gpa, seahorse, kleopatra | gpg
 
  -- Rene Engelhard <rene@debian.org>  Thu, 23 Nov 2017 18:44:11 +0100
 
